crates/nash-can/src/snapshots/nash_can__module__tests__case_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x =\n    case x of\n        1 -> \"one\"\n        _ -> \"other\"\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 7,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 7,
                        column: 1,
                    },
                },
                value: Case {
                    scrutinee: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 10,
                            },
                            end: Position {
                                line: 4,
                                column: 11,
                            },
                        },
                        value: VarLocal(
                            "x",
                        ),
                    },
                    branches: [
                        CaseBranch {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 10,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 14,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 19,
                                    },
                                },
                                value: Str(
                                    "one",
                                ),
                            },
                        },
                        CaseBranch {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 10,
                                    },
                                },
                                value: Anything,
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 14,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 21,
                                    },
                                },
                                value: Str(
                                    "other",
                                ),
                            },
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
